@@ -2312,41 +2312,6 @@ sub newLDAP
     return  EBox::Ldap->instance();
 }
 
-# common check for user names and group names
-sub checkNameLimitations
-{
-    my ($name) = @_;
-
-    # combination of unix limitations + windows limitation characters are
-    # limited to unix portable file character + space for windows compability
-    # slash not valid as first character (unix limitation)
-    # see http://technet.microsoft.com/en-us/library/cc776019%28WS.10%29.aspx
-    if ($name =~ /^[a-zA-Z0-9\._-][a-zA-Z0-9\._[:space:]-]*$/) {
-         return 1;
-     } else {
-         return undef;
-     }
-}
-
-# Method: checkCnLimitations
-#
-#   Return whether the given string is valid for its usage as a cn field.
-#
-# Parameters:
-#
-#   string - The string to check.
-#
-sub checkCnLimitations
-{
-    my ($self, $string) = @_;
-
-    if ($string =~ /^([a-zA-Z\d\s_-]+\.)*[a-zA-Z\d\s_-]+$/) {
-        return 1;
-    } else {
-        return undef;
-    }
-}
-
 #  Nethod: newUserUidNumber
 #
 #  return the uid for a new user
